@@ -10,6 +10,7 @@ Date: ????
     - Remove the connector when the thruster dies
     - Support adopting an upgraded/ghost thruster
     - Fix thruster control behavior finder using the wrong position
+    - Prevent control behavior ghosts existing without a thruster
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 17
